--- a/style.css
+++ b/style.css
@@ -1,7 +1,15 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 #display {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     display: flex;
     flex-direction: row-reverse;
     flex-wrap: wrap;
+    height: 100vh;
+    border: 2px red solid;
 }
