--- a/style.css
+++ b/style.css
@@ -6,9 +6,20 @@
 
 #display {
     font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
-    display: flex;
-    flex-direction: row-reverse;
-    flex-wrap: wrap;
     height: 100vh;
+    background-color: beige;
+}
+
+button {
+    background-color: rgb(154, 245, 234);
+    border: rgb(242, 7, 19) 6px solid;
+    color: rgb(242, 7, 19);
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 36px;
+    font-weight: bold;
+    border-radius: 20px;
+    cursor: pointer;
 }
