--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
     padding: 0;
 }
 
+body {
+    margin: 0;
+    padding: 0;
+}
+
 #display {
     font-family: Arial, Helvetica, sans-serif;
     height: 100vh;
